# rs-graph-llm

./: CLAUDE.md  Cargo.toml  MIGRATION_INVENTORY.md  PROGRESS.md  blackboard.md
.claude/: CRATE_STRUCTURE.md  LANGGRAPH_PARITY_CHECKLIST.md  PRODUCT_VISION.md
.claude/design-reference/: DESIGN_BRIEF.md
.claude/prompts/: SCOPE_F_mcp_server.md
crates/kernel/: Cargo.toml
crates/kernel/src/: connection.rs  lib.rs  protocol.rs  r_bridge.rs  zmq_client.rs
crates/notebook/: Cargo.toml
crates/notebook/src/: main.rs  mcp.rs  routes.rs  state.rs
crates/publish/: Cargo.toml
crates/publish/src/: html.rs  lib.rs  markdown.rs  pandoc_ast.rs
crates/query/: Cargo.toml
crates/query/src/: cypher.rs  gremlin.rs  lib.rs  local.rs  result.rs  sparql.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cell.rs  dataflow.rs  detect.rs  executor.rs  lib.rs
docs/: arigraph-episodic-semantic-memory.md  arigraph-integration-plan.md  arigraph-source-analysis.md
graph-flow/: Cargo.toml
graph-flow-server/: Cargo.toml
graph-flow-server/src/: lib.rs
graph-flow/src/: channels.rs  compat.rs  context.rs  error.rs  graph.rs  lance_storage.rs  lib.rs  mcp_tool.rs  react_agent.rs  state_snapshot.rs  storage.rs  storage_postgres.rs  storage_sqlite.rs  task.rs  tiered_storage.rs  typed_context.rs
graph-flow/src/agents/: agent_card.rs
graph-flow/src/prebuilt/: interrupt.rs  mod.rs  tool_node.rs
graph-flow/src/store/: lance.rs  memory.rs  mod.rs
recommendation-service/src/: main.rs
