[workspace]
members = [
    # Existing graph-flow ecosystem
    "graph-flow",
    "graph-flow-server",
    "insurance-claims-service",
    "examples",
    "recommendation-service",
    "medical-document-service",
    # Polyglot notebook crates (SCOPE A-E)
    "crates/runtime",       # SCOPE A: Reactive cell runtime (marimo transcode)
    "crates/query",         # SCOPE B: Query engines (graph-notebook transcode)
    "crates/kernel",        # SCOPE C: Jupyter kernel protocol (for R)
    "crates/publish",       # SCOPE D: Document publisher (quarto transcode)
    "crates/notebook",      # Binary: single executable combining all crates
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Concurrency
dashmap = "6.1"

# LLM
rig-core = "0.19.0"

# Web framework
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "uuid"] }

# Document processing
pdf2image = "0.1"

# Arrow ecosystem (aligned with lance-graph)
arrow = { version = "57", features = ["prettyprint"] }
arrow-array = "57"
arrow-schema = "57"
arrow-ipc = "57"

# Graph engine (path dep to sibling repo)
lance-graph = { path = "../lance-graph/crates/lance-graph" }

# SIMD/linalg (path dep to sibling repo)
ndarray = { path = "../ndarray" }

# HTTP client (for query engines)
reqwest = { version = "0.12", features = ["json"] }

# WebSocket (for gremlin protocol)
tokio-tungstenite = "0.26"

# ZMQ (for kernel protocol)
zeromq = "0.4"

# Crypto (for kernel protocol HMAC)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Markdown/document processing
pulldown-cmark = "0.12"
