[package]
name = "notebook"
version = "0.1.0"
edition = "2021"
description = "Polyglot reactive notebook — single binary"

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
notebook-runtime = { path = "../runtime" }
notebook-query = { path = "../query" }
notebook-kernel = { path = "../kernel" }
notebook-publish = { path = "../publish" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
