[package]
name = "notebook-publish"
version = "0.1.0"
edition = "2021"
description = "Document publisher: notebook → PDF/HTML (quarto transcode)"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pulldown-cmark = { workspace = true }
uuid = { workspace = true }
